[package]
name = "rusty-poker"
version = "0.1.0"
authors = ["bkushigian <bkushigian@gmail.com>"]
edition = "2018"

[lib]
name = "rusty_poker"
path = "src/lib.rs"

[[bin]]
name = "hand-v-hand"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
